--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat com Rafaela Victor</title>
+  <title>Chat com Rafaela Victor - Instagram</title>
   <style>
     * {
       box-sizing: border-box;
@@ -11,7 +11,7 @@
       padding: 0;
     }
     body {
-      background-color: #ece5dd;
+      background-color: #fafafa;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       display: flex;
       justify-content: center;
@@ -24,18 +24,20 @@
       border: 1px solid #ccc;
       border-radius: 40px;
       overflow: hidden;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
       background-color: #fff;
-      position: relative;
       display: flex;
       flex-direction: column;
+      position: relative;
     }
     .top-bar {
-      background-color: #075e54;
-      color: white;
+      background-color: #fff;
+      border-bottom: 1px solid #dbdbdb;
+      color: #262626;
       padding: 12px 15px;
       display: flex;
       align-items: center;
+      font-weight: 600;
     }
     .top-bar img {
       width: 36px;
@@ -44,14 +46,11 @@
       margin-right: 10px;
     }
     .top-bar .username {
-      font-weight: bold;
       font-size: 16px;
     }
     .chat-frame {
       flex: 1;
-      background-image: url('fundo.jpg');
-      background-size: cover;
-      background-position: center;
+      background-color: #fff;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -64,7 +63,7 @@
     .bottom-bar {
       background-color: #fff;
       padding: 10px;
-      border-top: 1px solid #ccc;
+      border-top: 1px solid #dbdbdb;
       display: flex;
       align-items: center;
     }
@@ -73,7 +72,7 @@
       border: none;
       border-radius: 20px;
       padding: 8px 12px;
-      background-color: #f0f0f0;
+      background-color: #efefef;
       margin: 0 8px;
       outline: none;
     }
@@ -91,10 +90,14 @@
       <span class="username">Rafaela Victor</span>
     </div>
     <div class="chat-frame">
-      <iframe src="https://typebot.co/clinicaestetica1" allow="clipboard-write"></iframe>
+      <iframe src="https://typebot.co/preagenda" allow="clipboard-write"></iframe>
       <div class="bottom-bar">
-   </div>
+        <!-- Visual apenas ilustrativo -->
+        <input type="text" placeholder="Enviar mensagem..."/>
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/filled-sent.png" alt="Enviar"/>
+      </div>
     </div>
   </div>
 </body>
 </html>
+
