--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="phone-frame">
     <div class="top-bar">
       <div class="user-info">
-        <img src="foto1.jpg" alt="Perfil"/>
+        <img src="vivalar.jpg" alt="Perfil"/>
         <span class="username">Rafaela Victor</span>
       </div>
       <div class="top-icons">
