--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
   <div class="phone-frame">
     <div class="top-bar">
       <div class="user-info">
-        <img src="vivalar.jpg" alt="Perfil"/>
-        <span class="username">Rafaela Victor</span>
+        <img src="vivalar.png" alt="Perfil"/>
+        <span class="username">Imobiliária Viva Lar</span>
       </div>
       <div class="top-icons">
         <!-- Telefone -->
